apps/docs/versioned_docs/version-1.0.3/layouts/responsive-grid.mdx
---
sidebar_position: 6
title: ResponsiveGrid
description: A powerful layout component for creating complex, responsive grids declaratively without media queries.
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import ResponsiveGrid from '@site/src/components/UI/responsive-grid';

## Overview

The **ResponsiveGrid** component allows developers to build responsive grid layouts declaratively, without writing media queries.  
It supports dynamic column counts across breakpoints, configurable gaps, equal-height items, and animations.

## Preview

<Tabs defaultValue="preview">
  <TabItem value="preview" label="Preview" default>
    <div className="p-4 border rounded-lg">
      <ResponsiveGrid 
        columns={{ mobile: 1, tablet: 2, desktop: 4 }}
        gap="normal"
        minItemWidth="100px"
        equalHeight
      >
        <div className="bg-red-600 text-white p-4 rounded">Item 1</div>
        <div className="bg-red-600 text-white p-4 rounded">Item 2</div>
        <div className="bg-red-600 text-white p-4 rounded">Item 3</div>
        <div className="bg-red-600 text-white p-4 rounded">Item 4</div>
      </ResponsiveGrid>
    </div>
  </TabItem>
  <TabItem value="code" label="Code">
    ```tsx
    import ResponsiveGrid from '@ignix-ui/responsivegrid';

    function Example() {
      return (
        <ResponsiveGrid 
          columns={{ mobile: 1, tablet: 2, desktop: 4 }}
          gap="normal"
          minItemWidth="100px"
          equalHeight
        >
          <div>Item 1</div>
          <div>Item 2</div>
          <div>Item 3</div>
          <div>Item 4</div>
        </ResponsiveGrid>
      );
    }
    ```
  </TabItem>
</Tabs>

## Installation

<Tabs>
  <TabItem value="cli" label="CLI" default>
    ```bash
    ignix add component responsivegrid
    ```
  </TabItem>
  <TabItem value="manual" label="manual" className="max-h-[500px] overflow-y-auto">

    ```tsx
import React, { ReactNode, CSSProperties } from "react";
import { motion, AnimatePresence } from "framer-motion";

type Columns = {
  mobile?: number;
  tablet?: number;
  desktop?: number;
};

type Gap = "small" | "normal" | "large" | string;

interface ResponsiveGridProps {
  children: ReactNode;
  columns?: Columns;
  gap?: Gap;
  minItemWidth?: string;
  equalHeight?: boolean;
  animation?: "none" | "fade" | "stagger" | "scale";
  className?: string;
}

const gapMap: Record<"small" | "normal" | "large", string> = {
  small: "0.5rem",
  normal: "1rem",
  large: "2rem",
};

const ResponsiveGrid: React.FC<ResponsiveGridProps> = ({
  children,
  columns = { mobile: 1, tablet: 2, desktop: 4 },
  gap = "normal",
  minItemWidth = "0px",
  equalHeight = false,
  animation = "none",
  className = "",
}) => {
  const computedGap = gapMap[gap as keyof typeof gapMap] || gap;

  const baseClass = "responsive-grid";

  const style: CSSProperties = {
    display: "grid",
    gap: computedGap,
    alignItems: equalHeight ? "stretch" : "start",
  };

  // Create a unique class so multiple grids don’t clash
  const uniqueClass = `${baseClass}-${Math.random().toString(36).substring(2, 9)}`;

  // Build CSS for responsive breakpoints
  const gridStyles = `
    .${uniqueClass} {
      grid-template-columns: repeat(${columns.mobile ?? 1}, minmax(${minItemWidth}, 1fr));
    }
    @media (min-width: 640px) {
      .${uniqueClass} {
        grid-template-columns: repeat(${columns.tablet ?? columns.mobile ?? 1}, minmax(${minItemWidth}, 1fr));
      }
    }
    @media (min-width: 1024px) {
      .${uniqueClass} {
        grid-template-columns: repeat(${columns.desktop ?? columns.tablet ?? columns.mobile ?? 1}, minmax(${minItemWidth}, 1fr));
      }
    }
  `;

  const variants = {
    hidden: { opacity: 0, scale: animation === "scale" ? 0.9 : 1 },
    visible: { opacity: 1, scale: 1 },
  };

  return (
    <>
      <style>{gridStyles}</style>
      <div
        key={`${gap}-${animation}-${equalHeight}-${columns.mobile}-${columns.tablet}-${columns.desktop}`}
        style={style}
        className={`${baseClass} ${uniqueClass} ${className}`}
      >
        <AnimatePresence>
          {React.Children.map(children, (child: any, index: number) => {
            if (animation === "none") return child;

            return (
              <motion.div
                key={index}
                initial="hidden"
                animate="visible"
                exit="hidden"
                variants={variants}
                transition={{
                  duration: 0.3,
                  delay: animation === "stagger" ? index * 0.1 : 0,
                }}
              >
                {child}
              </motion.div>
            );
          })}
        </AnimatePresence>
      </div>

    </>
  );
};

export default ResponsiveGrid;

    ```
  </TabItem>
</Tabs>

## Variants

import ResponsiveGridDemo from '@site/src/components/Demo/ResponsiveGridDemo';

<ResponsiveGridDemo />


## Usage

### Basic Example

```tsx
function ProductGrid() {
  return (
    <ResponsiveGrid 
      columns={{ mobile: 1, tablet: 2, desktop: 3 }}
      gap="large"
    >
      <ProductCard />
      <ProductCard />
      <ProductCard />
    </ResponsiveGrid>
  );
}
```

### Image Gallery

```tsx
function Gallery() {
  return (
    <ResponsiveGrid 
      columns={{ mobile: 2, tablet: 3, desktop: 5 }}
      gap="small"
      animation="stagger"
    >
      {images.map((src, i) => (
        <img key={i} src={src} className="rounded shadow" />
      ))}
    </ResponsiveGrid>
  );
}
```

## Props

| Prop          | Type                                                                 | Default   | Description                                                                 |
|---------------|----------------------------------------------------------------------|-----------|-----------------------------------------------------------------------------|
| `columns`     | `{ mobile?: number, tablet?: number, desktop?: number }`             | `{}`      | Defines column counts for each breakpoint.                                  |
| `gap`         | `"small" \| "normal" \| "large" \| string`                           | `"normal"`| Gap between grid items.                                                     |
| `minItemWidth`| `string`                                                             | `"auto"`  | Minimum width of each grid item before wrapping.                            |
| `equalHeight` | `boolean`                                                            | `false`   | Ensures all items in a row have equal height.                               |
| `animation`   | `"none" \| "fade" \| "stagger" \| "scale"`                           | `"none"`  | Defines animation for layout changes.                                       |
